# the_deck

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  README.md  build.ps1  build.sh  meson.build
decky/: CMakeLists.txt  card.cpp  deck.cpp  decky.h  decky_gtest.cpp  main.cpp  main_decrypt.cpp  main_encrypt.cpp  solitaire.cpp  the_deck.h
examples/: CMakeLists.txt  decrypt.cpp  encrypt.cpp
tests/: CMakeLists.txt  decky_gtest.cpp
